--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -18,7 +18,7 @@ body {
 }
 
 .card {
-  border: 0px
+  border: 0;
 }
 
 .graph-container {
@@ -26,3 +26,25 @@ body {
   height: 250px;
 }
 
+
+.btnStyle {
+
+  display: inline-block;
+  outline: none;
+  cursor: pointer;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 600;
+  border-radius: 8px;
+  padding: 13px 23px;
+  border: 1px solid #222222;
+  transition: box-shadow 0.2s ease 0s, -ms-transform 0.1s ease 0s, -webkit-transform 0.1s ease 0s, transform 0.1s ease 0s;
+  background: #fff;
+  color: #222222;
+  margin-left: 5px;
+}
+
+.btnStyle:hover {
+  border-color: #000000;
+  background: #f7f7f7;
+}
