fix KCL identity bug

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -232,7 +232,7 @@
       <form id="size" role="form">
         <table class="table">
           <tr style="display: inline;">
-            <th>Incident Matrix Size [A]: </th>
+            <th>Reduced incident Matrix Size [A]: </th>
           </tr>
           <tr style="display: inline; padding-left: 20px;">
             <td><input type="text" name="row-size" id="row-size" size="3"> *
